[package]

name = "hazard"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.1.0"

readme = "README.md"
license = "Apache-2.0"

description = "Hazard pointers."

documentation = "https://kylemayes.github.io/hazard/hazard"
repository = "https://github.com/KyleMayes/hazard"

[dependencies]

clippy = { version = "0.0.*", optional = true }
